lark/09/tests/errors/03_missing_bound.lark
(* Error test 03 — Return type mismatch (unification failure)
   Expected: TypeError — cannot unify Int with String *)

module TypeMismatch

fn stringify(x : Int) : String = x
